Adiciona documentacao do metodo delete e parametro de rota personalizavel para o usuario
